--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+absl-py==0.7.1
+astor==0.8.0
 atari-py==0.1.15
 bleach==1.5.0
+box2d-py==2.3.8
 certifi==2019.3.9
 cffi==1.12.3
 cloudpickle==1.2.1
@@ -7,16 +10,24 @@ cycler==0.10.0
 Cython==0.27.3
 enum34==1.1.6
 future==0.17.1
+gast==0.2.2
 glfw==1.8.1
+google-pasta==0.1.7
+grpcio==1.21.1
 gym==0.12.5
+-e git+git@github.com:AGKhalil/gym-cl.git#egg=gym_cl
 -e git+https://github.com/AGKhalil/gym-real.git#egg=gym_real
+h5py==2.9.0
 html5lib==0.9999999
 imageio==2.5.0
 joblib==0.13.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
 lockfile==0.12.2
 Markdown==3.1.1
 matplotlib==3.1.0
+mock==3.0.5
 mpi4py==3.0.2
 mujoco-py==2.0.2.2
 numpy==1.16.4
@@ -33,6 +44,10 @@ PyYAML==3.12
 scipy==1.3.0
 six==1.12.0
 stable-baselines==2.6.0
-tensorflow==1.4.0
+tensorboard==1.12.2
+tensorflow==1.13.0rc1
+tensorflow-estimator==1.13.0
 tensorflow-tensorboard==0.4.0
+termcolor==1.1.0
 Werkzeug==0.15.4
+wrapt==1.11.2
