--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ glfw==1.8.1
 google-pasta==0.1.7
 grpcio==1.21.1
 gym==0.12.5
--e git+git@github.com:AGKhalil/gym-cl.git#egg=gym_cl
--e git+https://github.com/AGKhalil/gym-real.git#egg=gym_real
+-e git+git@github.com:AGKhalil/gym-cl.git@8e14655bf34d7be9ac3027397b2016304b1f4036#egg=gym_cl
+-e git+https://github.com/AGKhalil/gym-real.git@6d9b702e706ffb4ffc50f22757a5493d829a5814#egg=gym_real
 h5py==2.9.0
 html5lib==0.9999999
 imageio==2.5.0
@@ -43,7 +43,7 @@ pytz==2019.1
 PyYAML==3.12
 scipy==1.3.0
 six==1.12.0
-stable-baselines==2.6.0
+-e git+git@github.com:AGKhalil/stable-baselines.git@2b41370497de3107da0c5858e23f70e49a0386b0#egg=stable_baselines
 tensorboard==1.12.2
 tensorflow==1.13.0rc1
 tensorflow-estimator==1.13.0
